# material-updater

./: Cargo.toml  README.md
.github/workflows/: Release.yml
src/: main.rs
