[package]
name = "material-updater"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.6", features = ["derive"] }
console = "0.15.8"
materialbin = { version = "0.1.1", git = "https://github.com/mcbegamerxx954/materialbin" }
scroll = "0.12.0"
zip = { version = "2.1.3", default-features = false, features = ["deflate"] }
zune-inflate = "0.2.54"

